# mcp-payments

./: CHANGELOG.md  Cargo.toml  README.md  mcp-server.toml
docs/: api-reference.md  governance.md
src/: client.rs  domain.rs  main.rs  server.rs  store.rs
