[package]
name = "mcp-payments"
version = "1.0.0"
edition = "2024"
authors = ["James Karanja <james.karanja@zavora.ai>"]
description = "Payments MCP Server — Stripe for payment intents, customers, invoices, and refunds"
license = "Apache-2.0"
repository = "https://github.com/zavora-ai/mcp-payments"
homepage = "https://enterprise.adk-rust.com"
keywords = ["mcp", "payments", "stripe", "enterprise", "adk"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
adk-mcp-sdk = "0.1"
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
schemars = "1"

[workspace]
