[package]
name = "mcp-payments"
version = "2.0.0"
edition = "2024"
authors = ["James Karanja <james.karanja@zavora.ai>"]
description = "Governed Payment Operations MCP — payment intents, approval gates, evidence, reconciliation, and audit for AI agents"
license = "Apache-2.0"
repository = "https://github.com/zavora-ai/mcp-payments"
homepage = "https://enterprise.adk-rust.com"
keywords = ["mcp", "payments", "commerce", "governance", "enterprise"]
categories = ["finance"]
readme = "README.md"

[dependencies]
adk-mcp-sdk = "0.1"
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
schemars = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[workspace]
